falta footer desktop

--- a/production/styles/_l-footer.scss
+++ b/production/styles/_l-footer.scss
@@ -1,7 +1,6 @@
 $margin: 15px;
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap');
-$margin: 15px;
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap');
+
 
 .Footer {
     background-color: rgb(245, 246, 248);
@@ -43,6 +42,48 @@ $margin: 15px;
 
 
    
+@media screen and (max-width:375px) {
+    .footer {
+        background-color: rgb(245, 246, 248);
+	    color: rgb(84, 85, 89);
+	    width: 100%;
+	    font-weight: bolder;
+	    font-size: 18px;
+	    gap: 20px;
+	    font-family: "Poppins", sans-serif;
+	    display: flex;
+	    flex-direction: column;
+	    align-items: center;
+
+        & figure {
+            margin: 0;
+            & .logo2 {
+                margin-top:15px;
+            }
+        }
+        & .section2 {
+            margin-top: -15px;
+            & p:nth-child(1) {
+                margin-left: 27px;
+            }
+        }
+        & .section3 {
+            margin-top: -35px;
+            & p:nth-child(2) {
+                margin-left: 23px;
+            }
+         }
+        & .section4 {
+            margin-top: -35px;
+        }
+        & .section5 {
+            margin-top: -15px;
+            display: inline-flex
+        } 
+    }
+}
+
+    
 
 @media  (max-width:375px) {
     .Footer {
