--- a/production/styles.css
+++ b/production/styles.css
@@ -2,7 +2,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap");
 .Body {
   width: auto;
   height: auto;
@@ -102,6 +101,7 @@
   display: flex;
   align-items: center;
   flex-direction: column;
+  font-family: "Bai Jamjuree", sans-serif;
 }
 .Main .encabezado {
   width: 100%;
@@ -224,16 +224,35 @@
   color: hsl(201, 11%, 66%);
 }
 .Main .logos {
-  width: 100%;
-  height: auto;
+  margin-left: 5%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  justify-content: center;
+}
+.Main .logos .google {
+  Width: 60%;
+}
+.Main .logos .ibm {
+  width: 47%;
+}
+.Main .logos .microsoft {
+  width: 65%;
+}
+.Main .logos .hp {
+  width: 60%;
+  margin-top: -12px;
+}
+.Main .logos .vector {
+  width: 55%;
 }
 .Main .clipboard {
+  margin-top: 100px;
+  margin-bottom: 100px;
   width: 100%;
   height: auto;
   display: flex;
   align-items: center;
   flex-direction: column;
-  margin-bottom: 40px;
   font-family: "Bai Jamjuree", sans-serif;
 }
 .Main .clipboard h2 {
@@ -276,15 +295,6 @@
 }
 
 @media (max-width: 375px) {
-  .Main {
-    /*& img{
-        padding-left:20%;
-        padding-right: 20%;
-        padding-top: 10px;
-        padding-bottom: 10px;
-        width: 150px;
-    }*/
-  }
   .Main .encabezado {
     padding: 0px;
     padding-top: 40px;
@@ -458,6 +468,45 @@
   grid-column: 3/4;
 }
 
+@media screen and (max-width: 375px) {
+  .footer {
+    background-color: rgb(245, 246, 248);
+    color: rgb(84, 85, 89);
+    width: 100%;
+    font-weight: bolder;
+    font-size: 18px;
+    gap: 20px;
+    font-family: "Poppins", sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .footer figure {
+    margin: 0;
+  }
+  .footer figure .logo2 {
+    margin-top: 15px;
+  }
+  .footer .section2 {
+    margin-top: -15px;
+  }
+  .footer .section2 p:nth-child(1) {
+    margin-left: 27px;
+  }
+  .footer .section3 {
+    margin-top: -35px;
+  }
+  .footer .section3 p:nth-child(2) {
+    margin-left: 23px;
+  }
+  .footer .section4 {
+    margin-top: -35px;
+  }
+  .footer .section5 {
+    margin-top: -15px;
+    display: inline-flex;
+  }
+}
 @media (max-width: 375px) {
   .Footer {
     background-color: rgb(245, 246, 248);
