--- a/production/styles/_l-main.scss
+++ b/production/styles/_l-main.scss
@@ -175,7 +175,8 @@ $color5:white;
             grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
             justify-content: center;
                      & .google {
-                        Width:60%;
+                        width:60%;
+                        
                     }
                     & .ibm {
                         width: 47%;
